# python-data-storage-test

./: README.md  data.json  data.jsonb  data.numpy  data.p7type  json_load.py  jsonb_load.py  numpy_load.py  p7type_load.py  pyproject.toml
typesystem/: README.md  __init__.py  constants.py  convert.py  file.py  schema.py  utils.py  value.py
typesystem/tests/: __init__.py  base_testcase.py  test_benchmark.py  test_binary.py  test_boolean.py  test_dictionary.py  test_enumeration.py  test_file.py  test_integer.py  test_list.py  test_matrix.py  test_null.py  test_path.py  test_real.py  test_slice.py  test_string.py  test_structure.py  test_subset.py  test_table.py  test_timestamp.py  test_usecases.py  test_value.py
typesystem/types/: __init__.py  binary.py  boolean.py  common.py  dictionary.py  enumeration.py  integer.py  list.py  matrix.py  null.py  path.py  real.py  slice.py  string.py  structure.py  subset.py  table.py  timestamp.py
